--- a/index.html
+++ b/index.html
@@ -60,6 +60,27 @@
         max-width: 100%;
       }
     }
+    .copy-toast {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background: #ffdc00;
+      color: #000;
+      font-weight: 600;
+      padding: 10px 18px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(255, 220, 0, 0.4);
+      opacity: 0;
+      transform: translateY(0);
+      z-index: 9999;
+      animation: popIn 0.3s ease forwards;
+    }
+
+    @keyframes popIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     /* Star field */
     .star {
       position: absolute;
@@ -208,8 +229,14 @@
 
     $('#copyBtn').click(() => {
       navigator.clipboard.writeText($('#outputData').val());
-      alert('Copied to clipboard!');
+      const toast = $('<div class="copy-toast">Copied!</div>');
+      $('body').append(toast);
+      toast.fadeIn(200).css({ transform: 'translateY(-10px)' });
+      setTimeout(() => {
+        toast.fadeOut(500, () => toast.remove());
+      }, 1000);
     });
+
 
     $('#downloadBtn').click(() => {
       const blob = new Blob([$('#outputData').val()], { type: 'text/plain' });
